--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,6 +11,15 @@ number = {2},
 doi = {10.1038/s41587-023-01767-y}
 }
 
+@Article{Burda2021,
+title = {lfl: An {R} package for linguistic fuzzy logic},
+author = {Michal Burda and Martin Štěpnička},
+journal = {Fuzzy Sets and Systems},
+year = {2021},
+issn = {0165-0114},
+doi = {10.1016/j.fss.2021.07.007},
+}
+  
 @Article{Castro2012,
 author = {Mauro AA Castro and Xin Wang and Michael NC Fletcher and Kerstin B Meyer and Florian Markowetz},
 title = {RedeR: R/Bioconductor package for representing modular structures, nested networks and multiple levels of hierarchical associations.},
