--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,11 +44,11 @@ doi = {10.1016/j.ccell.2024.12.002}
 
 @Article{Tercan2025,
 author = {Bahar Tercan and Victor H Apolonio and Vinicius S Chagas and Christopher K Wong and others},
-title = {Classification of non-TCGA cancer samples to TCGA molecular subtypes using compact feature sets.},
-journal = {Cancer Cell},
+title = {Protocol for assessing distances in pathway space for classifier feature sets from machine learning methods.},
+journal = { STAR Protocols},
 year = {2025},
-volume = {43},
-pages = {195--212},
+volume = {6},
+pages = {103681},
 number = {2},
 doi = {https://doi.org/10.1016/j.xpro.2025.103681}
 }
