--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -67,18 +67,14 @@ V(gtoy1)$name <- paste0("n", 1:5)
 
 # Checking graph validity
 
-Next, we will create a *GraphSpace-class* object using the `GraphSpace()` 
-constructor. This function will check the validity of the *igraph* object. 
-For this example `mar = 0.2`, which sets the outer margins as a fraction of 
-the 2D space on which the convolution operation will project the signal.
+Next, we will create a *GraphSpace-class* object using the `GraphSpace()` constructor. This function will check the validity of the *igraph* object. For this example `mar = 0.2`, which sets the outer margins of the graph.
 
 ```{r GraphSpace constructor - 1, eval=TRUE, message=FALSE}
 # Check graph validity
 g_space1 <- GraphSpace(gtoy1, mar = 0.2)
 ```
 
-Our graph is now ready for the *PathwaySpace* package. We can check its layout 
-using the `plotGraphSpace()` function. 
+Our graph is now ready for the *PathwaySpace* package. We can check its layout using the `plotGraphSpace()` function. 
 
 ```{r GraphSpace constructor - 2, eval=FALSE, message=FALSE, out.width="100%"}
 # Check the graph layout
@@ -144,7 +140,7 @@ vertexSignal(p_space1)
 
 ## Circular projection
 
-Following that, we will use the `circularProjection()` function to project the network signals, using Weibull decay with `pdist = 0.4`, which is passed by the `decay.fun` argument. This term determines a distance unit for the signal convolution, affecting the extent over which the convolution operation projects the signal. For example, when `pdist = 1`, it will represent the diameter of the inscribed circle within the coordinate space. We also set `k = 1`, which defines the contributing vertices for signal convolution. In this case, each *null-signal position* will receive the projection from a single *vertex-signal position* (*i.e.* the highest signal intensity in pathway space reaching that position). We then create a landscape image using the `plotPathwaySpace()` function.
+Following that, we will use the `circularProjection()` function to project the network signals by the `weibullDecay()` function with `pdist = 0.4`, which is passed by the `decay.fun` argument. This term determines a distance unit for the signal convolution, affecting the extent over which the convolution operation projects the signal. For example, when `pdist = 1`, it will represent the diameter of the inscribed circle within the coordinate space. We also set `k = 1`, which defines the contributing vertices for signal convolution.
 
 ```{r Circular projection - 1, eval=FALSE, message=FALSE, out.width="70%"}
 # Run signal projection
@@ -165,7 +161,7 @@ plotPathwaySpace(p_space1, add.marks = TRUE)
 knitr::include_graphics("figures/fig3.png")
 ```
 
-Next, we reassess the same *PathwaySpace* object, using `pdist = 0.2`, `k = 2` and adjusting the `shape` of the decay function.
+Next, we reassess the same *PathwaySpace* object, using `pdist = 0.2`, `k = 2` and adjusting the `shape` of the decay function (for further details, see the [**online tutorials**](https://sysbiolab.github.io/PathwaySpace/)).
 
 ```{r Circular projection - 3, eval=FALSE, message=FALSE, out.width="70%"}
 # Re-run signal projection, adjusting Weibull's shape
@@ -186,11 +182,11 @@ plotPathwaySpace(p_space1, marks = "n1", theme = "th2")
 knitr::include_graphics("figures/fig4.png")
 ```
 
-The `shape` parameter allows a projection to take a variety of shapes. When `shape = 1` the projection follows an exponential decay, and when `shape > 1` the projection is first convex, then concave with an inflection point along the decay path. For additional examples see documentation of the `weibullDecay()` function.
+The `shape` parameter allows a projection to take a variety of shapes. When `shape = 1` the projection follows an exponential decay, and when `shape > 1` the projection is first convex, then concave with an inflection point along the decay path. For additional examples see the [**modeling signal decay**](https://sysbiolab.github.io/PathwaySpace/modeling-signal-decay.html) tutorial.
 
 ## Polar projection
 
-In this section we will project the network signal using a polar coordinate system. This representation may be useful for certain types of data, for example, to highlight patterns of signal propagation on directed graphs, especially to explore the orientation aspect of signal flow. To demonstrate this feature we will used the `gtoy2` directed graph, available in the *RGraphSpace* package.
+In this section we will project network signals using a polar coordinate system. This representation may be useful for certain types of data, for example, to highlight patterns of signal propagation on directed graphs, especially to explore the orientation aspect of signal flow. To demonstrate this feature we will used the `gtoy2` directed graph, available in the *RGraphSpace* package.
 
 ```{r Polar projection - 1, eval=TRUE, message=FALSE, out.width="100%"}
 # Load a pre-processed directed igraph object
@@ -232,11 +228,11 @@ vertexDecay(p_space2) <- weibullDecay(shape=2, pdist = 1)
 vertexDecay(p_space2)[["n6"]] <- weibullDecay(shape=3, pdist = 1)
 ```
 
-Next, we run the signal projection using polar coordinates. The `beta` exponent will control the angular span; for values greater than zero, `beta` will progressively narrow the projection along the edge axis. Also, in the `polarProjection()` function, the `edge.norm = TRUE` is used by default and it will constrain signal projections within edge bounds. Here we set `pdist = 1` to reach full edge lengths.
+In polar projections, the `pdist` term defines a reference distance related to edge length, aiming to constrain signal projections within edge bounds. Here we set `pdist = 1` to reach full edge lengths. Next, we run the signal projection using polar coordinates. The `beta` exponent will control the angular span; for values greater than zero, `beta` will progressively narrow the projection along the edge axis.
 
 ```{r Polar projection - 5, eval=FALSE, message=FALSE, out.width="70%"}
 # Run signal projection using polar coordinates
-p_space2 <- polarProjection(p_space2, beta = 10, edge.norm = TRUE)
+p_space2 <- polarProjection(p_space2, beta = 10)
 
 # Plot PathwaySpace
 plotPathwaySpace(p_space2, theme = "th2", add.marks = TRUE)
